--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^1.3.4",
     "quasar": "^2.6.0",
     "vis-data": "7.1.2",
     "vis-timeline": "*",
